# ule4jis-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/: app.af  app_disabled.af  app_enabled.af
src/: app.rs  decorator.rs  emulation.rs  i18n.rs  icon.rs  key_condition.rs  key_emulator.rs  key_hooker.rs  main.rs  strategy.rs  tray.rs
