[package]
name = "ule4jis"
version = "1.0.1"
edition = "2021"
description = "US keyboard → JIS layout emulator (Rust rewrite of Ule4Jis)"
repository = "https://github.com/cwatanab/ule4jis-rs"
readme = "README.md"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Security",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
